fix(Table): z-index removed from table footer
z-index of table footer that was added to keep overlay on top of footer content were removed as it was preventing content from triggering click events

--- a/src/Table/table.css
+++ b/src/Table/table.css
@@ -150,7 +150,6 @@
   top: 0;
   right: 0;
   bottom: 0;
-  z-index: 1;
 }
 
 .tablePaginationInfo {
